# check

./: ChangeLog.md  README.md  check.cabal  check.nix  default.nix  shell.nix
.stack-work/install/eb32346d/flag-cache/: StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  check-0.1.0.0-4tu45YB2z1Y8P1saycWUPF  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  profunctors-5.2-2ZZOz6u59T2H8y7z3NgZkY  scientific-0.3.4.9-6oTYuCcx6H5BsTGU7D2Gk3  semigroups-0.18.2-2lmUSJvrDkM6JBURGRclWz  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  syb-0.6-C65vWCsht6A8uLstpQIXyj  tagged-0.8.5-CtgV6EcN0do8F92i1S6iYx  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s  transformers-compat-0.5.1.4-81lZyuOJOvsD0zyCv2TKld  unordered-containers-0.2.7.1-Eo9jd5DMz45DhBLCG8skzW  vector-0.11.0.0-BEDZb5o2QOhGbIm6ky7rl6  void-0.7.1-DMDx4oiJSktE01vWZZ8Wjg
.stack-work/install/eb32346d/pkgdb/: check-0.1.0.0-4tu45YB2z1Y8P1saycWUPF.conf  package.cache
ci/: ci.nix  jobsets.json  jobsets.nix
nix/: hedgehog.nix
src/Data/: Check.hs
src/Data/Check/: Field.hs
test/: Spec.hs
